--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -44,6 +44,9 @@
     <None Update="Years\2023\Input\Day14.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Years\2024\Input\Day06.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Years\2024\Input\Day05.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
